[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mdform"
authors = [
    { name="Hernán E. Grecco", email="hernan.grecco@gmail.com" },
]
description = "Parse Markdown form and generate useful templates and data."
keywords = ["markdown", "form"]
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Text Processing :: Markup :: HTML",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies", "version"]

[project.readme]
file = "README.rst"
content-type = "text/markdown"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies.test = {file = "requirements.test.txt"}

[project.urls]
"Homepage" = "https://github.com/hgrecco/mdform"
"Bug Tracker" = "https://github.com/hgrecco/mdform/issues"

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --doctest-modules"
pythonpath = "."
testpaths = [
    "mdform/testsuite"
]
doctest_optionflags = "NUMBER"


[tool.isort]
profile = "black"

[option.entry_points."markdown.extensions"]
form = "mdform:FormExtension"
