[metadata]
name = mdform
author = Hernan E. Grecco
author_email = hernan.grecco@gmail.com
license = BSD
description = Parse Markdown form and generate useful templates and data.
long_description = file: README.rst
keywords = markdown, form
url = https://github.com/hgrecco/mdform
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Topic :: Text Processing :: Markup :: HTML
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = mdform
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
    setuptools
    markdown>=3.0.1
    unidecode
    dataclass_wizard

setup_requires =
    setuptools
    setuptools_scm

[options.entry_points]
markdown.extensions =
    form = mdform:FormExtension

[options.extras_require]
test =
    pytest
    pytest-cov

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[tool:pytest]
addopts = --pyargs

[isort]
default_section=THIRDPARTY
known_first_party=mdform
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[zest.releaser]
python-file-with-version = version.py
